# generative-lm-benchmarking

./: .gitignore  README.md  answer_parser.py  convert_pdf.py  demo.py  evaluate_question_alignment.py  evaluate_relevance.py  generate_document_topics.py  generate_novel_mcq.py  generate_novel_open.py  generate_reformat_mcq.py  generate_reformat_open.py  inspect_eval_mcq.py  inspect_eval_open.py  inspect_eval_open_mmlu.py  inspect_open.py  model_interface.py  prompts.py  pyproject.toml  runner.sh  similarity_filter.py  utils.py  validate_explanations.py  validate_reformat_fidelity.py
data-hle/: hle.json  overall_results.csv
data-mmlu/: overall_results.csv
data-mmlu/generative_mmlu_pro/: Algebra-and-Trigonometry-2e-WEB.json  Chemistry2e-WEB.json  Introduction_To_Computer_Science-WEB.json  Psychology2e_WEB.json
data-mmlu/generative_mmlu_pro/manually-validated/: mmlu_pro_biology_novel.json  mmlu_pro_biology_novel.txt  mmlu_pro_chemistry_novel.json  mmlu_pro_chemistry_novel.txt  mmlu_pro_computer_science_novel.json  mmlu_pro_computer_science_novel.txt  mmlu_pro_math_novel.json  mmlu_pro_math_novel.txt  (+4 more)
data-mmlu/mmlu_pro/: mmlu_pro_biology.json  mmlu_pro_chemistry.json  mmlu_pro_computer science.json  mmlu_pro_math.json  mmlu_pro_physics.json  mmlu_pro_psychology.json
data-qa/: flashrag_2wikimultihopqa.json  flashrag_boolq.json  flashrag_fermi.json  flashrag_hotpotqa.json  flashrag_msmarcoqa.json  flashrag_musique.json  mrqa_HotpotQA.json  mrqa_NaturalQuestionsShort.json  mrqa_TriviaQA-web.json  pubmed_qa.json  sec_qa.json  squadv2.json  triva_qa.json
