[project]
name = "generative-lm-benchmarking"
version = "0.1.0"
description = "Generative LM benchmarking from grounding documents"
readme = "README.md"
dependencies = [
    "datasets>=3.6.0",
    "inspect-ai==0.3.72",
    "openai>=1.78.1",
    "httpx",
    "numpy",
    "dotenv",
    "sentence_transformers",
]
